kubernetes/applications/code-server/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    app.kubernetes.io/part-of: homelab-development
