kubernetes/applications/code-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: development
  labels:
    app.kubernetes.io/name: code-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: code-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
